feat: change description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienlen777</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="description" content="Trở thành tay choi TIENLEN đẳng cấp. Đăng ký ngay để nhận 10,000 Chips miễn phí!" />
+    <meta name="description" content="Trở thành tay choi TIENLEN đẳng cấp. Đăng ký ngay để nhận 20,000 SIU miễn phí!" />
     <style>
       * {
         margin: 0;
